--- a/templates/index.html
+++ b/templates/index.html
@@ -222,7 +222,7 @@
                     <option value="">בחר דגם</option>
                 </select>
                 <!-- Other input fields -->
-                <input type="number" name="hand" placeholder="בעלות" value="{{ hand }}" required>
+                <input type="number" name="hand" placeholder="יד" value="{{ hand }}" required>
                 <input type="number" name="engine_volume" placeholder="נפח מנוע" value="{{ engine_volume }}" required>
                 <input type="number" name="mileage" placeholder="קילומטראז'" value="{{ mileage }}" required>
                 
